syntax = "proto3";

option java_package = "org.crazycoder.door.service.protobuf";
option java_multiple_files = true;

message DoorSensorDataRequest {
    string deviceId = 1;
}
